# FWR_firmware

./: .gitignore  CLAUDE.md  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
.claude/: settings.local.json
components/camera/: CMakeLists.txt  camera.c  camera.h
components/lcd/: CMakeLists.txt  lcd.c  lcd.h
components/lcd/drivers/: lcd_ek79007.c  lcd_ek79007.h  lcd_hx8394.c  lcd_hx8394.h
main/: CMakeLists.txt  Kconfig  idf_component.yml  main.cpp  main_fwr_ofd.cpp  main_fwr_test.cpp  main_fwr_video.cpp  main_imu_test.cpp  main_rx_test.cpp  main_sbus_monitor.cpp  ofd.cpp  ofd.h  ofd_config.h  video_rec.cpp  video_rec.h  yolo.cpp  yolo.h
main/fwr_control/: fwr_control.cpp  fwr_control.h  sbus_rx.cpp  sbus_rx.h
main/model/: ESPdet.espdl  bas2.espdl  bas224.espdl  basketball_64.espdl  basketball_640.espdl  kyu160.espdl  kyubest1.espdl  kyumini.espdl
video converter/: convert_mjp.py  convert_vid.py  real_flight.CSV  retune_ofd.py  viz_ofd.py
